[gd_scene load_steps=7 format=3 uid="uid://7ajkp07thh0e"]

[ext_resource type="Theme" uid="uid://bx3jvtk8472ag" path="res://theme.tres" id="1_elk5m"]
[ext_resource type="Script" uid="uid://h8sle10i4al" path="res://colour_state_edit.gd" id="2_7cm2r"]
[ext_resource type="Texture2D" uid="uid://bcg6i5vgrulrt" path="res://ui/up18.png" id="2_k1pwo"]
[ext_resource type="Texture2D" uid="uid://c0jf3lwycmlct" path="res://ui/ri18.png" id="4_0mxfn"]
[ext_resource type="Texture2D" uid="uid://gwikgpip264u" path="res://ui/ba18.png" id="5_8hx45"]
[ext_resource type="Texture2D" uid="uid://54m4i7wrug84" path="res://ui/le18.png" id="6_1gsgk"]

[node name="ColourStateEdit" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 60.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_elk5m")
script = ExtResource("2_7cm2r")
metadata/_edit_use_anchors_ = true

[node name="Colour" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.333333
anchor_bottom = 1.0
text_overrun_behavior = 1
metadata/_edit_use_anchors_ = true

[node name="State" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.333333
anchor_right = 0.666667
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="Rotation" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.666667
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_constants/arrow_margin = 0
theme_override_constants/modulate_arrow = 0
selected = 0
item_count = 4
popup/item_0/icon = ExtResource("2_k1pwo")
popup/item_0/id = 0
popup/item_1/icon = ExtResource("4_0mxfn")
popup/item_1/id = 1
popup/item_2/icon = ExtResource("5_8hx45")
popup/item_2/id = 2
popup/item_3/icon = ExtResource("6_1gsgk")
popup/item_3/id = 3
metadata/_edit_use_anchors_ = true

[connection signal="item_selected" from="Colour" to="." method="_on_colour_item_selected"]
[connection signal="item_selected" from="State" to="." method="_on_state_item_selected"]
[connection signal="item_selected" from="Rotation" to="." method="_on_rotation_item_selected"]
